Initial project upload

--- a/odoo_db_manager/templates/odoo_db_manager/import_logs.html
+++ b/odoo_db_manager/templates/odoo_db_manager/import_logs.html
@@ -1,4 +1,4 @@
-{% extends 'odoo_db_manager/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}{{ title }}{% endblock %}
